# MDR-ESP-firmware

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MDR_Calibration_Commands.md  MDR_Torque_Firmware_Reference.md  eeprom.c  eeprom.c_d  eeprom.h  eeprom.h_d  i2c_basic_example_main.c  i2c_basic_example_main.c_reference  spi_master_example_main.c_reference
.cache/clangd/index/: RTD_temp_svc.c.73A836A1751C885D.idx  RTD_temp_svc.h.CF455F1A63B6C425.idx  Relay_SSR_svc.c.B82E00984EB0C367.idx  Relay_SSR_svc.h.84A2B1B2821A741F.idx  app_main.c.20886703671F3F5B.idx  comm_exec.c.5C5E109BDC269270.idx  (+15 more)
BSP/inc/: balaji_infotech_machine_controller_v1.h
BSP/src/: balaji_infotech_machine_controller_v1.c
app/: app_main.c
app/inc/: RTD_temp_svc.h  Relay_SSR_svc.h  comm_exec.h  config.h  load_cell_svc.h
app/src/: RTD_temp_svc.c  Relay_SSR_svc.c  comm_exec.c  config.c  load_cell_svc.c
app_drivers/inc/: eeprom.h  hx711.h  hx711Config.h  max31865.h
app_drivers/src/: eeprom.c  hx711.c  max31865.c
main/: CMakeLists.txt
python/: 30_torque_calib_loadcell_log.csv  Calibration_Offset_20251008_090535.xlsx  Calibration_Scale_20251008_090659.xlsx  Calibration_Scale_20251011_135156.xlsx  Calibration_Scale_20251011_140834.xlsx  Calibration_Scale_20251011_141204.xlsx  Calibration_Scale_20251011_141628.xlsx  MDR_simulation.py  actuall_sample_loadcell_log.csv  calibration_loadcell_log.csv  loadcell_log.csv  loadcell_log.py  loadcell_log_1.csv  loadcell_log_3.csv  log_plot.py  offset_loadcell_log.csv  sample-test_04_calculated_20251008_090819.xlsx  torque_cycles.csv  torque_output.csv
